--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -22,6 +22,7 @@ body.layout-home {
 
     svg {
       height: 135px;
+      margin-bottom: 13px;
     }
   }
 
